--- a/4R.md
+++ b/4R.md
@@ -167,8 +167,9 @@ The counterpart of Frank in painting was George Tooker (1920-2011). Born in Broo
 
 [^44]:	Thomas Garver, *George Tooker* (New York: Chameleon Books, 1992); http://collection.whitney.org/object/3052. Accessed March 10, 2018. See also, [@tunkl1980]
 
-Without question, the epitome of midcentury loneliness in song was Frank Sinatra.
-It was the contribution of Frank Sinatra to create a body of work that moved beyond predictable laments and conveyed how loneliness dissolved facades and personas, revealing an essential vulnerability. Born in 1915, Sinatra had achieved 1940s success singing for a number of large bands, including Tommy Dorsey and Harry James. A teen idol in the mid-1940s, he hit a rough patch thereafter in which he was reduced to doing novelty songs. Released from his Columbia contract, he staged a comeback in the 1950s with an Oscar for his role in *From Here to Eternity* (1953) and sixteen albums for Capitol in which he reinvented himself as a mature, complex singer. The Capitol albums were not so much random collections of songs than ones organized around a theme or concept. Some featured the hip Sinatra, a jaunty and charming rogue with a jazz sensibility. Contrasting with the swinging Sinatra was the lonely one, who could not transcend the damages of his failed love life and went through his daily life unconnected to and unaware of others. In albums *In the Wee Small Hours* (1955), *Where are You?* (1957), *Only the Lonely* (1958)--which Sinatra called his favorite--and *No One Cares* (1959), Sinatra revealed a self crumbling under the pressure of isolation. Bolstering the effect was the album art, which portrayed a devastated Sinatra in ways few stars of his magnitude would have allowed. *Only the Lonely* featured Sinatra as a clown obscured by a black background so that only half his face is discernible and the visible part touched with red highlights on lips, nose and eyes to give the impression of a crying clown. *No One Cares* has him sitting alone and forlorn bathed in light while all around him couples socialize.[^45]
+The chronicler of loneliness in song was most certainly Frank Sintra, who created an unparalleled body of work that moved beyond predictable laments and conveyed how loneliness dissolved facades and personas to reveal the essential vulnerability of postwar life, Born in 1915, Sinatra had achieved 1940s success singing for a number of large bands, including Tommy Dorsey and Harry James. A teen idol in the mid-1940s, he hit a rough patch thereafter in which he was reduced to doing novelty songs. Released from his Columbia contract, he staged a comeback in the 1950s with an Oscar for his role in *From Here to Eternity* (1953) and sixteen albums for Capitol in which he reinvented himself as a mature, complex singer. The Capitol albums were less random collections of songs than cohesive wholes, organized around a theme or concept. Some featured the hip Sinatra, a jaunty and charming rogue with a jazz sensibility. Contrasting with the swinging Sinatra was the lonely one, who could not transcend the damages of his failed love life and went through his daily life unconnected to and unaware of others. In albums *In the Wee Small Hours* (1955), *Where are You?* (1957), *Only the Lonely* (1958)--which Sinatra called his favorite--and *No One Cares* (1959), Sinatra revealed a self crumbling under the pressure of isolation. Bolstering the effect was the album art, which portrayed a devastated Sinatra in ways few stars of his magnitude would have allowed. *Only the Lonely* featured Sinatra as a clown obscured by a black background so that only half his face is discernible and the visible part touched with red highlights on lips, nose and eyes to give the impression of a crying clown. *No One Cares* has him sitting alone and forlorn bathed in light while all around him couples socialize.[^45]
+
+[^45]:	Chris Rojek, *Frank Sinatra* (Cambridge and Malden, MA: Polity, 2004); John Rockwell, *Sinatra: An American Classic* (New York: Random House, 1984); Roger Gilbert, “The Swinger and the Loser: Sinatra, Masculinity, and Fifties Culture,” in *Frank Sinatra and Popular Culture: Essays on an American Icon*, ed. Leonard Mustazza (Westport, Conn: Praeger, 1998); Steven Petkov, “Ol’ Blue Eyes and the Golden Age of the American Song: The Capitol Years,” in *The Frank Sinatra Reader* (New York: Oxford University Press, 1995), 74-84.
 
 Sinatra’s 1950s work subtly explored the varieties of loneliness, revealing a self insecure even when appearing confident to others. With the help of arrangers Nelson Riddle and Gordon Jenkins, Sinatra summoned a complex psychological landscape full of precariousness and disquiet. These effects owed much to Sinatra’s talents and musical intelligence. His celebrated breath control enabled him to emulate both the operatic bel canto style, which varied legato and staccato passages while frequently altering tempo, and Dorsey’s trombone virtuosity. With his flexible phrasing and accenting, Sinatra mastered a conversational style of singing that enabled him to project a variety of vulnerabilities, in contrast to the strident, even parodic, masculinity of his “swinging” albums. In fraying his voice or shifting between major and minor keys without musical resolution, Sinatra constructed a singing self that lacked poise and closure. In those cases, where the song, like an operatic recitative, lacked a real tune, Sinatra captured the midcentury despair at the inability of the self to find its center in social life.
 
@@ -177,23 +178,17 @@ Sinatra skillfully moved in his so-called “down” albums between gloom, resig
 The problem of loneliness generated calls for adopting of cheery attitude, joining groups, and, should those fail to alleviate feelings, therapy. The tendency to treat the somber feelings that accompany being alone as a problem led a few writers to assert that not all states of aloneness were detrimental to a meaningful sense of self. Clark Moustakas maintained that reflexive flight from solitude was an effort to avoid inner life and ran the risk of self-alienation and feelings of inferiority. Those “not open enough, flexible enough, expansive enough to attach” themselves “to new personas and find value in new experiences” were frightened to face loneliness. Confronting the sense of absence provoked an “intense and timeless awareness of the Self which allows for new sensitivities and awareness, and which results in bringing a person deeply in touch with his own existence and in touch with others in a fundamental sense.”[^46] Moustakas concentrated on particularly vivid or life-changing experiences such as the sudden and severe illness of children, war injuries, the dread evoked by mountain climbing or exploring the unknown, political trials and tribulations (he mentions both Alger Hiss and Whitaker Chambers) but insisted that courting loneliness will help with quotidian living. The Catholic convert and social activist Dorothy Day experienced the new self that emerged from loneliness as rebirth in religious terms. Solitude enabled her to become aware of the full extent of her sinfulness and realize that true selfhood existed in a religious community involved in the life of others.[^47] Day’s loneliness and Moustakas’ loneliness were not, it should be said, the usual experience of the time. 
  
 
-
-
-
-
-
-
-
-
-
-
-
-
-[^45]:	Chris Rojek, *Frank Sinatra* (Cambridge and Malden, MA: Polity, 2004); John Rockwell, *Sinatra: An American Classic* (New York: Random House, 1984); Roger Gilbert, “The Swinger and the Loser: Sinatra, Masculinity, and Fifties Culture,” in *Frank Sinatra and Popular Culture: Essays on an American Icon*, ed. Leonard Mustazza (Westport, Conn: Praeger, 1998); Steven Petkov, “Ol’ Blue Eyes and the Golden Age of the American Song: The Capitol Years,” in *The Frank Sinatra Reader* (New York: Oxford University Press, 1995), 74-84.
-
 [^46]:	Clark E. Moustakas, *Loneliness* (Englewood Cliffs: Prentice-Hall, 1961), 31-2, 7.
 
 [^47]:	Dorothy Day, *The Long Loneliness: The Autobiography of Dorothy Day* (New York: Curtis Books, 1972).
+
+
+
+
+
+
+
+
 
 [^48]:	Joseph F. Kett, *Rites of Passage: Adolescence in America, 1790 to the Present* (New York: Basic Books, 1977); Hall, quoted in Thomas Hine, *The Rise and Fall of the American Teenager* (New York, N.Y.: Bard, 1999), 160. “School boys point up a US weakness,” *Life Magazine* (March 24, 1958), 26-35. On juvenile delinquency, see James Burkhart. Gilbert, *A Cycle of Outrage: America’s Reaction to the Juvenile Delinquent in the 1950s* (New York: Oxford University Press, 1986).
 
