--- a/4R.md
+++ b/4R.md
@@ -167,7 +167,7 @@ The counterpart of Frank in painting was George Tooker (1920-2011). Born in Broo
 
 [^44]:	Thomas Garver, *George Tooker* (New York: Chameleon Books, 1992); http://collection.whitney.org/object/3052. Accessed March 10, 2018. See also, [@tunkl1980]
 
-The chronicler of loneliness in song was most certainly Frank Sintra, who created an unparalleled body of work that moved beyond predictable laments and conveyed how loneliness dissolved facades and personas to reveal the essential vulnerability of postwar life, Born in 1915, Sinatra had achieved 1940s success singing for a number of large bands, including Tommy Dorsey and Harry James. A teen idol in the mid-1940s, he hit a rough patch thereafter in which he was reduced to doing novelty songs. Released from his Columbia contract, he staged a comeback in the 1950s with an Oscar for his role in *From Here to Eternity* (1953) and sixteen albums for Capitol in which he reinvented himself as a mature, complex singer. The Capitol albums were less random collections of songs than cohesive wholes, organized around a theme or concept. Some featured the hip Sinatra, a jaunty and charming rogue with a jazz sensibility. Contrasting with the swinging Sinatra was the lonely one, who could not transcend the damages of his failed love life and went through his daily life unconnected to and unaware of others. In albums *In the Wee Small Hours* (1955), *Where are You?* (1957), *Only the Lonely* (1958)--which Sinatra called his favorite--and *No One Cares* (1959), Sinatra revealed a self crumbling under the pressure of isolation. Bolstering the effect was the album art, which portrayed a devastated Sinatra in ways few stars of his magnitude would have allowed. *Only the Lonely* featured Sinatra as a clown obscured by a black background so that only half his face is discernible and the visible part touched with red highlights on lips, nose and eyes to give the impression of a crying clown. *No One Cares* has him sitting alone and forlorn bathed in light while all around him couples socialize.[^45]
+The most accomplished chronicler of loneliness in song was Frank Sintra, who created an unparalleled body of work that moved beyond predictable laments and conveyed how loneliness dissolved facades and personas to reveal the essential vulnerability of postwar life, Born in 1915, Sinatra had achieved 1940s success singing for a number of large bands, including Tommy Dorsey and Harry James. A teen idol in the mid-1940s, he hit a rough patch thereafter in which he was reduced to doing novelty songs. Released from his Columbia contract, he staged a comeback in the 1950s with an Oscar for his role in *From Here to Eternity* (1953) and sixteen albums for Capitol in which he reinvented himself as a mature, complex singer. The Capitol albums were less random collections of songs than cohesive wholes, organized around a theme or concept. Some featured the hip Sinatra, a jaunty and charming rogue with a jazz sensibility. Contrasting with the swinging Sinatra was the lonely one, who could not transcend the damages of his failed love life and went through his daily life unconnected to and unaware of others. In albums *In the Wee Small Hours* (1955), *Where are You?* (1957), *Only the Lonely* (1958)--which Sinatra called his favorite--and *No One Cares* (1959), Sinatra revealed a self crumbling under the pressure of isolation. Bolstering the effect was the album art, which portrayed a devastated Sinatra in ways few stars of his magnitude would have allowed. *Only the Lonely* featured Sinatra as a clown obscured by a black background so that only half his face is discernible and the visible part touched with red highlights on lips, nose and eyes to give the impression of a crying clown. *No One Cares* has him sitting alone and forlorn bathed in light while all around him couples socialize.[^45]
 
 [^45]:	Chris Rojek, *Frank Sinatra* (Cambridge and Malden, MA: Polity, 2004); John Rockwell, *Sinatra: An American Classic* (New York: Random House, 1984); Roger Gilbert, “The Swinger and the Loser: Sinatra, Masculinity, and Fifties Culture,” in *Frank Sinatra and Popular Culture: Essays on an American Icon*, ed. Leonard Mustazza (Westport, Conn: Praeger, 1998); Steven Petkov, “Ol’ Blue Eyes and the Golden Age of the American Song: The Capitol Years,” in *The Frank Sinatra Reader* (New York: Oxford University Press, 1995), 74-84.
 
