--- a/4R.md
+++ b/4R.md
@@ -96,7 +96,7 @@ Although there is very little discussion of loneliness as the term is usually un
 
 Sparked by a cover story in *Time Magazine* on Riesman and the American character in 1954, many readers interpreted Riesman’s book as deploring the rise of the other-directed personality, which they saw as conformist, insecure, and dependent. They read into his portrait of the inner-directed man as self-contained, ambitious, and better at things than with people an elegy for a character type that no longer fit the new world of group work and human relations. Even as the story indicated how well adjusted and social Riesman himself was, the cover reinforced the lament interpretation. It featured a man in a business suit with a radar transmitter on his back looking to the future and the Victorian figure with a compass moving back into the mists of the past while the faceless masses congregated behind the bespectacled Riesman.[^30]
 
-[^30]: For reception of *Lonely Crowd*, see Eric Larrabee, “David Riesman and His Readers,” in [@lipset1961, 404-16] and Wilfred M. McClay, “The strange career of *The Lonely Crowd*: or, the antimonies of autonomy in [@haskell1993, p. 397-440] Barbara Ehrenreich gives the inner-other directed distinction a gendered reading in [@ehrenreich1983, p. 35]
+[^30]: For reception of *Lonely Crowd*, see Eric Larrabee, “David Riesman and His Readers,” in [@lipset1961, 404-16] and Wilfred M. McClay, “The strange career of *The Lonely Crowd*: or, the antimonies of autonomy" in [@haskell1993, p. 397-440] Barbara Ehrenreich gives the inner-other directed distinction a gendered reading in [@ehrenreich1983, p. 35]
 
 Riesman denied he was simply lamenting the decline of nineteenth-century individualism or criticizing conformity as such. Riesman was clear that the issue was *how*, not whether, a society induces conformity. Nineteenth-century America did so through a similar internal code that resulted in envy and emulation among inner-directed strivers. The other-directed, he noted, conformed from an “greater resonance with others, a heightened self-consciousness about relations to people, and a widening of the circle with whom one wants to feel in touch.” Nor did he think the inner-directed personality was particularly admirable, pointing to its crabbed, constricted and parochial nature. The inner-directed man may have had his internal code, but the circle of others who were acceptable was quite small and his inner censor could be unproductively unforgiving. Inner direction may have suited the class-conflict ridden stage of capitalism but was hardly the model for personal freedom in the modern age.[^31]
 
@@ -130,7 +130,7 @@ Most unsympathetic commentators regarded Beats as conformist in their nonconform
 
 [^36]: Burroughs in *The Job: Interviews with William Burroughs by Daniel Odier* (New York: Penguin, [1969] 1989, p. )
 
-[^37]:	Ann Charters, *The Beats: Literary Bohemians in Postwar America* (Detroit, Mich.: Gale Research Co., 1983); Gene Feldman and Max Gartenberg, *The Beat Generation and the Angry Young Men* (Secaucus: Citadel Press, 1984); Kostas Myrsiades, *The Beat Generation: Critical Essays* (New York: Peter Lang, 2002); Leerom Medovoi, *Rebels Youth and the Cold War Origins of Identity*(Durham: Duke University Press, 2005).
+[^37]:	Ann Charters, *The Beats: Literary Bohemians in Postwar America* (Detroit, Mich.: Gale Research Co., 1983); Gene Feldman and Max Gartenberg, *The Beat Generation and the Angry Young Men* (Secaucus: Citadel Press, 1984); Kostas Myrsiades, *The Beat Generation: Critical Essays* (New York: Peter Lang, 2002); Leerom Medovoi, *Rebels Youth and the Cold War Origins of Identity* (Durham: Duke University Press, 2005).
 
 
 Beat spontaneity did not result in a consistent philosophy. More philosophically sophisticated in its consideration of the meaning and dilemmas of identity was existentialism. Although as historian George Cotkin has argued several strains of American thought had existential themes, the philosophy did not take hold until European versions arrived in mid-twentieth century. The thought of Soren Kierkegaard, introduced through the efforts of neo-Orthodox Episcopal minister, Walter Lowrie, led figures as diverse as Reinhold Niebuhr, Will Herberg, Whitaker Chambers, and Arthur Schlesinger, Junior to temper or reject their one-time expansive hopes for social transformation. Existentialism gathered steam with the New York intellectuals’ discovery and promotion of the French writers, Jean-Paul Sartre, Simone de Beauvoir and Albert Camus in the mid-1940s, but all three had unsatisfactory visits to United States. Their hosts criticized the existentialists for their flirtation with Marxism (Camus being an exception), shallow knowledge of Freud, and mass-media posturing. Nonetheless existentialism remained attractive as a philosophy of authenticity that enjoined individuals not to accept fate but instead create their identities as singular, unique beings. More than the pose of Greenwich Village coffeehouse habitués, existentialism proved a bracing challenge and support for those searching for an understanding of where they stood in the world. One sign of its success was the appearance of such academic efforts to provide meaningful genealogies and commentary as Hazel Barnes’s *The Literature of Possibility* (1957) and Walter Kaufmann’s *Existentialism From Dostoevsky to Sartre* (1956). By the mid-1960s, existentialism had profoundly affected the novelists Anne Rice and Marge Piercy, the feminist Roxanne Dunbar-Ortiz, and radicals Tom Hayden and Robert Moses, and, ironically, given their opposing sexual politics, Betty Friedan and Norman Mailer.[^38]
