--- a/4R.md
+++ b/4R.md
@@ -181,3 +181,31 @@ The problem of loneliness generated calls for adopting of cheery attitude, joini
 [^46]:	Clark E. Moustakas, *Loneliness* (Englewood Cliffs: Prentice-Hall, 1961), 31-2, 7.
 
 [^47]:	Dorothy Day, *The Long Loneliness: The Autobiography of Dorothy Day* (New York: Curtis Books, 1972).
+
+### The Young and the Restless
+
+
+Few discussions of the Fifties fail to mention the species known as the American teenager, identifiable by its common experience of high school and its own particular culture and behavioral repertoire. As Joseph Kett has demonstrated, before the twentieth century Americans were unaccustomed to thinking of the teen years as a distinct period devoted to experimentation and preparation for adulthood, or to assume that puberty was accompanied by emotional turbulence. The first full articulation of youth as a transitional state suspended between childhood and adulthood was the psychologist G. Stanley Hall’s *Adolescence* (1904). Hall saw the condition as one of storm and stress, marked by conflict with parents, mood swings and risky behavior. “Youth,” he wrote, “awakes to a new world and understands neither it nor himself.”[^48]
+
+[^48]: Joseph F. Kett, *Rites of Passage: Adolescence in America, 1790 to the Present* (New York: Basic Books, 1977); Hall, quoted in Thomas Hine, *The Rise and Fall of the American Teenager* (New York, N.Y.: Bard, 1999), 160.
+
+Hall’s concept was the province of experts rather until the term “teenager” came into general use at midcentury. It arose primarily to demarcate a group that had enough disposable income to constitute a market segment that marketeers could exploit. In very short order, it came to signify not only Hall's storm and stress but also insecurities among peers and career uncertainties. Adults recognized American adolescents as a distinctive breed. According to a famous post-Sputnik *Life* magazine story, they were the reverse of their Soviet counterparts. Where Soviet teenagers were dedicated to their studies and committed to the success of their nation, Americans obsessed over dating, sports, and possession of the latest consumer goods. The characterization of American teenagers as consumed by the pursuit of fun, fun, fun was clearly a limited one. Not only did it obscure the threat of nuclear annihilation that haunted the future, it also defined fun in ways more typical of white, middle-class teenagers. The amusements and practices of racial minorities and working-class teenagers were often linked with juvenile delinquency.[^49]
+
+[^49]: “School boys point up a US weakness,” *Life Magazine* (March 24, 1958), 26-35. On juvenile delinquency, see James Burkhart. Gilbert, *A Cycle of Outrage: America’s Reaction to the Juvenile Delinquent in the 1950s* (New York: Oxford University Press, 1986).
+
+Adult puzzlement about teenagers stimulated numerous reports from the field in order to understand the condition. As is often the case for voyages to unknown lands, the accounts were diametrically opposed to one another. The classic conception of the teenage state was psychoanalyst Erik Erikson’s _Childhood and Society_ (1951). Best known for its psychological elaboration of the concept of identity, the book melded the biological and social struggles on the road to adulthood in a way that drew upon Erikson’s training and inclinations. Born in 1902 in Frankfort, uncertain who was his father (which, biographers have speculated, accounts for his interest in identity), he migrated in 1927 to Vienna to teach at a school designed for children whose parents were in treatment with Anna Freud. At her urging, he enrolled at the Vienna Psychoanalytic Institute, where he received his diploma in 1933. Harassed by the Nazis, he and his wife Joan set sail for the United States that same year. Using his contacts in the culture and personality school of anthropologists--- Edward Sapir, Margaret Mead, Alfred Kroeber, and Ruth Benedict ---Erikson spent time observing the Sioux and the Yoruk before taking a position at the University of California. Those observations bore fruit in _Childhood and Society_’s emphasis on the culture-bound nature of personality development. Critical of efforts to enforce conformity by edict, he left the Berkeley campus in the early 1950s in protest of the requirement that faculty sign loyalty oaths.
+
+*Childhood and Society* laid out eight stages of life, each of which linked biological development to what Erikson termed a psychosocial crisis. As individuals attempt to master the bodily functions and the corresponding life task, they encounter a set of conflicts that raise existential questions. So the initial stage of life in which the infant struggles with oral mastery and negotiates between inside and outside is rooted in the relationship with the mother and raises the question of trust. Subsequent stages involve bowel control and muscle control, which have as their life tasks negotiating the conflict between autonomy and shame and doubt and initiative and guilt respectively. Erikson’s sequence is cumulative: successful negotiation of the crisis of each stage yields rewards or “virtues.” A child who negotiates the trust - mistrust psychosocial challenge will emerge with hope. Passing through the second stage with a sense of autonomy rather than shame or doubt, for instance, bestows the virtue of will. Although Erikson posed one pole of the challenge as the optimal or desirable force, he was well aware that both were needed for healthy living. Some mistrust of others is surely warranted, as is retaining some reserves of shame and doubt. Those who could not balance psychosocial forces or interact with the outside in productive ways could, Erikson maintained, pass on to the next stage, but the residue of the unsuccessful challenge would reassert itself in problems in later life.[^50]
+
+[^50]:	Erik H. Erikson, *Childhood and Society* (New York: Norton, 1950), 219-35.
+
+The contrast with Freudian orthodoxy was marked. Rather than emphasize the conflicts between nature and social demands in the early years of life that endowed individuals with a characteristic stock of psychic responses, Erikson treated each stage as important in its own right. Working from the position that the ego had its own claims and was not necessarily at the mercy of the more powerful id and superego, Erikson contended that adolescence was not simply a consequence of Oedipal struggles but an important component of an ongoing process.
+
+Given Erikson’s insistence that identity was necessary to the feeling of being alive, one might conclude that the four prior stages led up to the crucial work of adolescence and the three subsequent ones expressed and expanded the identity that developed in adolescence. In Erikson's scheme, the years between puberty and nineteen were a time of struggle between identity (a continuous and stable sense of one’s character, qualities, and goals) and role confusion (the inability to settle upon appropriate ways of being and achieve detente between self and society). Successful resolution of the psychosocial crisis entailed integrating memories of what one had been in the past with anticipations of what one hoped to be in the future. Easier said than done because adolescents were still uncertain of their physical and mental powers and intensely sensitive to how they appeared to others. If the task of identity is frustrated, much anti-social destructive behavior followed. As complicated as the stage could be, most adolescents do find an identity. Crucial to success was parental allowance for experimentation. Those who do open up space for a “moratorium,” Erikson advised, will generally find that their children have developed a full-blown identity in which they have reestablished boundaries and learned to negotiate a sometimes hostile world.
+
+Although adolescence took place during a specific point in the life cycle and entailed finding identity, Erikson insisted that the content of adolescence varied from culture to culture, a point he developed further in his studies of Luther and Gandhi.[^52] Nature alone did not dictate how adolescence would be experienced or how the psychosocial conflict would be resolved. Drawing on his anthropological work, Erikson concluded that adolescence was best understood as an experiment in constituting and reconstituting fragmentary selves. Because the purpose of identity was to help individuals adapt to historical change, there was never just one successful resolution of the identity crisis but a number of reasonable ones.
+
+The process would always be more or less tumultuous, but, the European Erikson maintained, it need not be as as severe and disorienting as it was in the United States. American adolescents were ill-equipped because the culture favored constant reinvention in the quest of singularity and American institutions were far to impermanent to guide transitions. Worried about the effects of mass society , Erikson bemoaned the ways incessant preparation for success resulted in a population of "overadjusted" teenagers who were prematurely pushed to a premature resolution of the psychosocial crisis. The prime purveyors of what he called the "social jungle of human existence was “Mom” (punctuation in the original), a composite, stereotypical entity who managed her children’s lives. The over-controlling, castrating mother, made famous by Phillip Wylie's *Generation of Vipers* (1942), received much criticism for building weak children during midcentury. In Erikson's version, she insisted on rigid moral behavior to help her children become independent but the actual effect was a feeling of abandonment in her children at one level and of guilt from abandoning her at another.[@wylie1942. On changes in motherhood, see @plant2010]
+
+
+[^52]:	Erik H. Erikson, *Gandhi’s Truth: On the Origins of Militant Nonviolence* (New York: Norton, 1969); Erik H. Erikson, *Young Man Luther: A Study in Psychoanalysis and History.* (New York: Norton, 1958).
